// Code generated by entproto. DO NOT EDIT.
syntax = "proto3";

package pb;

import "google/protobuf/empty.proto";

import "google/protobuf/timestamp.proto";

import "proto/base.proto";

option go_package = "proto/pb;proto";

message User {
  int32 id = 1;

  google.protobuf.Timestamp created_at = 90;

  google.protobuf.Timestamp updated_at = 91;

  google.protobuf.Timestamp deleted_at = 100;

  string username = 2;

  string nickname = 3;

  UserInfo info = 4;
}

message UserInfo{
  string address =1;
}

message CreateUserRequest {
  User user = 1;
}

message GetUserRequest {
  int64 id = 1;

  View view = 2;

  enum View {
    VIEW_UNSPECIFIED = 0;

    BASIC = 1;

    WITH_EDGE_IDS = 2;
  }
}

message UpdateUserRequest {
  User user = 1;
}

message ListUserResponse {
  repeated User user_list = 1;

  string next_page_token = 2;
}

message BatchCreateUsersRequest {
  repeated CreateUserRequest requests = 1;
}

message BatchCreateUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc Create ( CreateUserRequest ) returns ( User );

  rpc Get ( GetUserRequest ) returns ( User );

  rpc Update ( UpdateUserRequest ) returns ( User );

  rpc Delete ( DeleteRequest ) returns ( google.protobuf.Empty );

  rpc List ( ListRequest ) returns ( ListUserResponse );

  rpc BatchCreate ( BatchCreateUsersRequest ) returns ( BatchCreateUsersResponse );
}
